crates/bacnet-cli/src/tui/tests/snapshots/bacnet__tui__tests__frames__connecting_80x24.snap
---
source: crates/bacnet-cli/src/tui/tests/frames.rs
expression: "screen(&mut app, 80, 24)"
---
" bacnet | BIP | connecting | READ-ONLY | drop 0                          ? help "
"┌ Devices (0) | sort: instance ↑ ──────────────────────────────────────────────┐"
"│                                                                              │"
"│                                 Connecting...                                │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
" L log  ? help  q quit                                                          "
