crates/bacnet-cli/src/tui/tests/snapshots/bacnet__tui__tests__frames__duplicate_80x24.snap
---
source: crates/bacnet-cli/src/tui/tests/frames.rs
expression: "screen(&mut app, w, h)"
---
" bacnet | BIP 10.0.0.1:47808 | up | READ-ONLY | drop 0                   ? help "
" DUPLICATE instance 1002 claimed by 10.0.1.22:47808 and 10.0.1.99:47808         "
"┌ Devices (5) | sort: instance ↑ ──────────────────────────────────────────────┐"
"│  Instance* Address                         Net    Vendor APDU  Seg      Seen │"
"│> 1001      10.0.1.21:47808                 local  260    1476  none     2s   │"
"│  1002      10.0.1.22:47808                 local  5      1476  none     2s   │"
"│  1003      10.0.1.23:47808                 local  260    1476  none     2s   │"
"│  1004      10.0.1.24:47809                 local  8      1476  none     2s   │"
"│  2001      05 via 10.0.1.1:47808           2      24     480   both     7s   │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└ Who-Is local 1000-2999: done, 3 replies ─────────────────────────────────────┘"
" d Who-Is  / filter  s sort  S reverse  L log  ? help  q quit                   "
