crates/bacnet-cli/src/tui/tests/snapshots/bacnet__tui__tests__frames__filtered_80x24.snap
---
source: crates/bacnet-cli/src/tui/tests/frames.rs
expression: "screen(&mut app, w, h)"
---
" bacnet | BIP 10.0.0.1:47808 | up | READ-ONLY | drop 0                   ? help "
"┌ Devices (4 of 5) | sort: address ↓ ────────────────────── filter: "10.0.1.2" ┐"
"│  Instance  Address*                        Net    Vendor APDU  Seg      Seen │"
"│> 1004      10.0.1.24:47809                 local  8      1476  none     2s   │"
"│  1003      10.0.1.23:47808                 local  260    1476  none     2s   │"
"│  1002      10.0.1.22:47808                 local  5      1476  none     2s   │"
"│  1001      10.0.1.21:47808                 local  260    1476  none     2s   │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└ Who-Is local 1000-2999: done, 3 replies ─────────────────────────────────────┘"
" /10.0.1.2_  Enter keep  Esc clear                                              "
