crates/bacnet-cli/src/tui/tests/snapshots/bacnet__tui__tests__frames__help_120x40.snap
---
source: crates/bacnet-cli/src/tui/tests/frames.rs
expression: "screen(&mut app, w, h)"
---
" bacnet | BIP 10.0.0.1:47808 | up | READ-ONLY | drop 0                                                           ? help "
"┌ Devices (5) | sort: instance ↑ ──────────────────────────────────────────────────────────────────────────────────────┐"
"│  Instance* Address                                                Network  Vendor  Max APDU  Segmentation  Last seen │"
"│> 1001      10.0.1.21:47808                                        local    260     1476      none          2s        │"
"│  1002      10.0.1.22:47808                                        local    5       1476      none          2s        │"
"│  1003      10.0.1.23:47808                                        local    260     1476      none          2s        │"
"│  1004      10.0.1.24:47809                                        local    8       1476      none          2s        │"
"│  2001      05 via 10.0.1.1:47808                                  2        24      480       both          7s        │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                           ┌ Help (? or Esc to close) ────────────────────────────────────┐                           │"
"│                           │ Global                                                       │                           │"
"│                           │   ?             Show or hide this help                       │                           │"
"│                           │   q             Quit                                         │                           │"
"│                           │   Ctrl-C        Cancel the running operation; twice quits    │                           │"
"│                           │   L             Show or hide the log pane                    │                           │"
"│                           │ Devices                                                      │                           │"
"│                           │   d             Open the Who-Is form                         │                           │"
"│                           │   Up Down j k   Move; PgUp PgDn Home End jump                │                           │"
"│                           │   s  S          Next sort column; reverse the order          │                           │"
"│                           │   /             Filter rows; Esc clears the filter           │                           │"
"│                           │ Who-Is form                                                  │                           │"
"│                           │   Tab Up Down   Next or previous field                       │                           │"
"│                           │   Left Right    Change the scope (also Space)                │                           │"
"│                           │   Enter         Send; Enter again confirms a warning         │                           │"
"│                           │   Esc           Close the form                               │                           │"
"│                           │                                                              │                           │"
"│                           │ READ-ONLY: this version only sends discovery requests.       │                           │"
"│                           └──────────────────────────────────────────────────────────────┘                           │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"└ Who-Is local 1000-2999: done, 3 replies ─────────────────────────────────────────────────────────────────────────────┘"
"                                                                                                                        "
