crates/bacnet-cli/src/tui/tests/snapshots/bacnet__tui__tests__frames__help_80x24.snap
---
source: crates/bacnet-cli/src/tui/tests/frames.rs
expression: "screen(&mut app, w, h)"
---
" bacnet | BIP 10.0.0.1:47808 | up | READ-ONLY | drop 0                   ? help "
"┌ Devices (5) | sort: instance ↑ ──────────────────────────────────────────────┐"
"│  Instance* Address                         Net    Vendor APDU  Seg      Seen │"
"│> 1001 ┌ Help (? or Esc to close) ────────────────────────────────────┐  2s   │"
"│  1002 │ Global                                                       │  2s   │"
"│  1003 │   ?             Show or hide this help                       │  2s   │"
"│  1004 │   q             Quit                                         │  2s   │"
"│  2001 │   Ctrl-C        Cancel the running operation; twice quits    │  7s   │"
"│       │   L             Show or hide the log pane                    │       │"
"│       │ Devices                                                      │       │"
"│       │   d             Open the Who-Is form                         │       │"
"│       │   Up Down j k   Move; PgUp PgDn Home End jump                │       │"
"│       │   s  S          Next sort column; reverse the order          │       │"
"│       │   /             Filter rows; Esc clears the filter           │       │"
"│       │ Who-Is form                                                  │       │"
"│       │   Tab Up Down   Next or previous field                       │       │"
"│       │   Left Right    Change the scope (also Space)                │       │"
"│       │   Enter         Send; Enter again confirms a warning         │       │"
"│       │   Esc           Close the form                               │       │"
"│       │                                                              │       │"
"│       │ READ-ONLY: this version only sends discovery requests.       │       │"
"│       └──────────────────────────────────────────────────────────────┘       │"
"└ Who-Is local 1000-2999: done, 3 replies ─────────────────────────────────────┘"
"                                                                                "
