crates/bacnet-cli/src/tui/tests/snapshots/bacnet__tui__tests__frames__no_match_80x24.snap
---
source: crates/bacnet-cli/src/tui/tests/frames.rs
expression: "screen(&mut app, 80, 24)"
---
" bacnet | BIP 10.0.0.1:47808 | up | READ-ONLY | drop 42                  ? help "
"┌ Devices (0 of 1) | sort: instance ↑ ────────────────────── filter: "nothing" ┐"
"│                                                                              │"
"│              No device matches "nothing". Esc clears the filter.             │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
" /nothing_  Enter keep  Esc clear                                               "
